Modify kernel in demo notebook

--- a/demo_scattering_boundary_conditions.ipynb
+++ b/demo_scattering_boundary_conditions.ipynb
@@ -876,9 +876,9 @@
    "formats": "ipynb,py"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (DOLFINx complex)",
    "language": "python",
-   "name": "python3"
+   "name": "python3-complex"
   }
  },
  "nbformat": 4,
